# mkvreader

./: CMakeLists.txt  DbgOut.cpp  DbgOut.h  LICENSE.txt  README.md  abort_callback.h  container_matroska.h  container_matroska_impl.cpp  container_matroska_impl.h  filesystem_matroska.cpp  filesystem_matroska.h  matroska_parser.cpp  matroska_parser.h
cmake/Modules/: FindEBML.cmake  FindMatroska.cmake
examples/: CMakeLists.txt
examples/mjpgdemuxer/: CMakeLists.txt  main.cpp
include/mkvreader/: matroska_parser.h
scripts/: make_release
src/: CMakeLists.txt  matroska_parser.cpp
